--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,5 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
+:root
+ --doc-height: 100%
+
 body
-    height: 100%
+    height: 100
     padding: 0
     margin: 0
+    height: 100vh
+    height: var(--doc-height)
