--- a/src/app/modules/main/main.component.sass
+++ b/src/app/modules/main/main.component.sass
@@ -3,11 +3,37 @@
     flex-direction: column
     height: 100vh
     .header
-        height: 30px
+        height: 60px
         background-color: coral
-
+        display: flex
+        justify-content: space-between
+        padding: 10px
     .body
         height: 100vh
     .navbar
-        height: 30px
+        display: flex
+        height: 60px
         background-color: cyan
+        justify-content: space-around
+        align-items: center
+
+.modal
+    display: block
+    position: fixed
+    z-index: 1
+    left: 0
+    top: 0
+    width: 100%
+    height: 100%
+    overflow: auto
+    background-color: rgb(0, 0, 0)
+    background-color: rgba(0, 0, 0, 0.4)
+    .modal-content
+        background-color: #fefefe
+        margin: 15% auto
+        padding: 20px
+        border: 1px solid #888
+        width: 80%
+        .close-container
+            display: flex
+            justify-content: flex-end
