chore: change styles

--- a/src/app/modules/main/classification/classification.component.sass
+++ b/src/app/modules/main/classification/classification.component.sass
@@ -1,5 +1,6 @@
 .classification-module
     .header
+        padding-top: 25px
         text-align: center
     .classification
         padding: 10px
