--- a/src/app/modules/main/home/home.component.sass
+++ b/src/app/modules/main/home/home.component.sass
@@ -22,5 +22,5 @@
             button
                 font-size: 30px
                 font-weight: bold
-                height: 40px
-                width: 40px
+                height: 2em
+                width: 1.6em
