--- a/src/app/modules/main/main.component.html
+++ b/src/app/modules/main/main.component.html
@@ -6,7 +6,7 @@
     <div class="body">
         <router-outlet></router-outlet>
     </div>
-    <div class="navbar">
+    <div class="navbar fixed-bottom">
         <a routerLink="/home">Home</a>
         <a routerLink="/classification">Clasificación</a>
     </div>
