--- a/src/app/modules/main/classification/classification.component.html
+++ b/src/app/modules/main/classification/classification.component.html
@@ -14,9 +14,7 @@
         </div>
         <ng-template #loading>
             <div class="spinner-container">
-                <div class="spinner-border" role="status">
-                    <span class="visually-hidden">Loading...</span>
-                </div>
+                <spinner-component></spinner-component>
             </div>
         </ng-template>
     </div>
