--- a/src/app/modules/main/home/home.component.sass
+++ b/src/app/modules/main/home/home.component.sass
@@ -24,3 +24,6 @@
                 font-weight: bold
                 height: 2em
                 width: 1.6em
+
+.btn-light
+    background-color: rgb(209, 209, 209) !important
