chore(icons); implement icons

--- a/src/app/modules/main/classification/classification.component.sass
+++ b/src/app/modules/main/classification/classification.component.sass
@@ -15,6 +15,12 @@
                     margin-bottom: 5px
                     p
                         margin: 0
+                    h2
+                        font-size: 32px
+                    h3
+                        font-size: 26px
+                    h4
+                        font-size: 20px
                     .counter
                         font-weight: bold
                         margin-right: 10px
