--- a/src/app/modules/main/home/home.component.html
+++ b/src/app/modules/main/home/home.component.html
@@ -6,6 +6,7 @@
     <div class="body">
         <div class="element">
             <h4>cubata</h4>
+            <img src="/assets/vat.svg" width="32" height="32">
             <div class="button-container">
                 <button class="btn btn-light" (click)="decreaseValue(1)">-</button>
                 <button class="btn btn-light" (click)="increaseValue(1)">+</button>
@@ -13,6 +14,7 @@
         </div>
         <div class="element">
             <h4>chupito</h4>
+            <img src="/assets/shot.svg" width="32" height="32">
             <div class="button-container">
                 <button class="btn btn-light" (click)="decreaseValue(0.75)">-</button>
                 <button class="btn btn-light" (click)="increaseValue(0.75)">+</button>
@@ -20,6 +22,7 @@
         </div>
         <div class="element">
             <h4>cerveza</h4>
+            <img src="/assets/beer.svg" width="32" height="32">
             <div class="button-container">
                 <button class="btn btn-light" (click)="decreaseValue(0.5)">-</button>
                 <button class="btn btn-light" (click)="increaseValue(0.5)">+</button>
