--- a/src/app/modules/main/home/home.component.sass
+++ b/src/app/modules/main/home/home.component.sass
@@ -14,6 +14,7 @@
         display: flex
         flex-direction: column
         justify-content: center
+        align-items: center
         text-align: center
         .button-container
             display: flex
