--- a/src/app/modules/main/main.component.sass
+++ b/src/app/modules/main/main.component.sass
@@ -16,6 +16,8 @@
         background-color: cyan
         justify-content: space-around
         align-items: center
+        img
+            cursor: pointer
 
 .modal
     display: block
