chore(home): capitalize text

--- a/src/app/modules/main/home/home.component.html
+++ b/src/app/modules/main/home/home.component.html
@@ -5,7 +5,7 @@
     </div>
     <div class="body">
         <div class="element">
-            <h4>cubata</h4>
+            <h4>Cubata</h4>
             <img src="/assets/vat.svg" width="64" height="64">
             <div class="button-container">
                 <button class="btn btn-light" (click)="decreaseValue(1)">-</button>
@@ -13,7 +13,7 @@
             </div>
         </div>
         <div class="element">
-            <h4>chupito</h4>
+            <h4>Chupito</h4>
             <img src="/assets/shot.svg" width="64" height="64">
             <div class="button-container">
                 <button class="btn btn-light" (click)="decreaseValue(0.75)">-</button>
@@ -21,7 +21,7 @@
             </div>
         </div>
         <div class="element">
-            <h4>cerveza</h4>
+            <h4>Cerveza</h4>
             <img src="/assets/beer.svg" width="64" height="64">
             <div class="button-container">
                 <button class="btn btn-light" (click)="decreaseValue(0.5)">-</button>
