chore(home): resize icons

--- a/src/app/modules/main/home/home.component.sass
+++ b/src/app/modules/main/home/home.component.sass
@@ -10,10 +10,11 @@
         width: 30%
         border: 1px solid black
         border-radius: 5px
+        padding-top: 5px
         padding-bottom: 10px
         display: flex
         flex-direction: column
-        justify-content: center
+        justify-content: space-between
         align-items: center
         text-align: center
         .button-container
