--- a/src/app/modules/login/login.component.sass
+++ b/src/app/modules/login/login.component.sass
@@ -1,18 +1,22 @@
-.google-button
-    padding: 0 2px 2px 2px
-    width: fit-content
-    -webkit-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.31)
-    -moz-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.31)
-    box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.31)
-    cursor: pointer
-    margin-top: 25px
-
 .login-container
     display: flex
     flex-direction: column
     align-items: center
     height: 85vh
     justify-content: space-around
+    .title-container
+        text-align: center
+        .icons-container
+            position: relative
+            img
+                position: absolute
+                top: 0
+                left: 0
+                width: 100%
+            .image-1
+                top: 64px
+            .image-2
+                left: 6px
     .spinner-container
         display: flex
         justify-content: center
