chore(icons): set icon colors

--- a/src/app/modules/main/main.component.sass
+++ b/src/app/modules/main/main.component.sass
@@ -4,7 +4,7 @@
     height: 90vh
     .header
         height: 60px
-        background-color: coral
+        background-color: #ff7f50
         display: flex
         justify-content: space-between
         padding: 10px
@@ -13,7 +13,7 @@
     .navbar
         display: flex
         height: 60px
-        background-color: cyan
+        background-color: #0dcaf0
         justify-content: space-around
         align-items: center
         img
