chore(rooms): add rooms

--- a/src/app/modules/login/login.component.sass
+++ b/src/app/modules/login/login.component.sass
@@ -17,7 +17,13 @@
                 top: 64px
             .image-2
                 left: 6px
-    .spinner-container
-        display: flex
-        justify-content: center
-        align-items: center
+    .button-container
+        position: relative
+        .spinner-container
+            position: absolute
+            left: 40%
+            display: flex
+            justify-content: center
+            align-items: center
+        .button
+            margin-top: 40px
