--- a/src/app/modules/main/home/home.component.sass
+++ b/src/app/modules/main/home/home.component.sass
@@ -7,7 +7,7 @@
     gap: 10px
     padding-top: 25px
     .element
-        width: 30%
+        width: 30vw
         border: 1px solid black
         border-radius: 5px
         padding-top: 5px
