--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -8,12 +8,12 @@
         </div>
     </div>
 
-    <div>
+    <div class="button-container">
         <div class="spinner-container">
             <spinner-component *ngIf="showSpinner"></spinner-component>
         </div>
 
-        <div class="row" (click)="loginWithGoogle()">
+        <div class="row button" (click)="loginWithGoogle()">
             <div>
                 <a class="btn btn-outline-dark"  role="button" style="text-transform:none">
                     <img width="20px" style="margin-bottom:3px; margin-right:5px" alt="Google sign-in" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/512px-Google_%22G%22_Logo.svg.png" />
