--- a/src/app/components/ranking/ranking.component.sass
+++ b/src/app/components/ranking/ranking.component.sass
@@ -1,6 +1,6 @@
 .ranking
     .list
-        height: 500px
+        height: 75vh
         overflow-y: auto
         .user-container
             margin-bottom: 10px
@@ -8,22 +8,31 @@
                 display: flex
                 justify-content: space-between
                 margin-bottom: 5px
+                .text
+                    width: 80%
+                    text-overflow: ellipsis
+                    white-space: nowrap
+                    overflow: hidden
                 p
                     margin: 0
                 h2
                     font-size: 32px
+                    width: 70%
                 h3
+                    width: 75%
                     font-size: 26px
                 h4
                     font-size: 20px
                 .counter
                     font-weight: bold
                     margin-right: 10px
+                    text-align: right
+                    width: 25%
             .divider
                 height: 1px
                 border: solid 1px black
     .spinner-container
-        height: 500px
+        height: 75vh
         display: flex
         justify-content: center
         align-items: center
