--- a/src/app/components/ranking/ranking.component.sass
+++ b/src/app/components/ranking/ranking.component.sass
@@ -27,7 +27,11 @@
                     font-weight: bold
                     margin-right: 10px
                     text-align: right
-                    width: 25%
+                    width: 20%
+                    h2
+                        width: 30%
+                    h3
+                        width: 25%
             .divider
                 height: 1px
                 border: solid 1px black
