chore: add meta tags

--- a/src/app/modules/main/classification-main/room-ranking/room-ranking.component.sass
+++ b/src/app/modules/main/classification-main/room-ranking/room-ranking.component.sass
@@ -15,6 +15,8 @@
                 .ranking
                     .list
                         height: 60vh
+                    .spinner-container
+                        height: 60vh
     .buttons-container
         display: flex
         justify-content: space-evenly
