--- a/src/app/modules/main/classification-main/room-ranking/room-ranking.component.sass
+++ b/src/app/modules/main/classification-main/room-ranking/room-ranking.component.sass
@@ -2,21 +2,26 @@
     display: flex
     flex-direction: column
     height: 80vh
-    justify-content: space-between
     .header
         padding-top: 25px
         text-align: center
     .room-ranking
         padding: 10px
-        h4
-            text-align: center
+        height: 50vh
+        .no-room
+            height: 100%
+            display: flex
+            align-items: center
+            justify-content: center
+            h4
+                text-align: center
         ranking-component
             ::ng-deep
                 .ranking
                     .list
-                        height: 60vh
+                        height: 50vh
                     .spinner-container
-                        height: 60vh
+                        height: 50vh
     .buttons-container
         display: flex
         justify-content: space-evenly
