--- a/src/app/modules/main/classification-main/room-ranking/room-ranking.component.sass
+++ b/src/app/modules/main/classification-main/room-ranking/room-ranking.component.sass
@@ -1,10 +1,15 @@
 .room-ranking-module
-    display: flex
-    flex-direction: column
     height: 80vh
+    position: relative
     .header
         padding-top: 25px
         text-align: center
+        position: relative
+        padding-bottom: 40px
+        .code
+            position: absolute
+            bottom: 0
+            width: 100%
     .room-ranking
         padding: 10px
         height: 50vh
@@ -23,6 +28,9 @@
                     .spinner-container
                         height: 50vh
     .buttons-container
+        position: absolute
+        width: 100%
+        bottom: 0
         display: flex
         justify-content: space-evenly
         gap: 10px
