chore(room): fix styles

--- a/src/app/modules/main/main.component.sass
+++ b/src/app/modules/main/main.component.sass
@@ -3,7 +3,7 @@
     flex-direction: column
     height: 90vh
     .header
-        height: 60px
+        height: 9vh
         background-color: #ff7f50
         display: flex
         justify-content: space-between
@@ -12,7 +12,7 @@
         height: 100vh
     .navbar
         display: flex
-        height: 60px
+        height: 9vh
         background-color: #0dcaf0
         justify-content: space-around
         align-items: center
